--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "^1.22.1",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/slider": "^4.5.0",
     "expo": "~50.0.7",
+    "expo-device": "~5.9.3",
+    "expo-notifications": "~0.27.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
